# pye3d-detector

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGES.rst  INSTALL_SOURCE.md  INSTALL_SOURCE.rst  LICENSE  MANIFEST.in  README.md  README.rst  conda-env.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: black-check.yml  build-deps.yml  build-opencv.yml  build-pye3d.yml  build.yml
.travis/: build_wheels_manylinux.sh  check_cache_manylinux.sh  check_opencv_manylinux.sh  setup_mac.sh  setup_manylinux.sh  setup_opencv_manylinux.sh  setup_win.sh  travis-win-tox.ini
benchmarks/: accuracy.py  profiling.py
benchmarks/data/: .gitignore
docs/: conf.py  examples.rst  index.rst  install_from_source.rst  known_build_issue.rst
examples/: process_eye_video.py
pye3d/: __init__.py  background_helper.py  camera.py  constants.py  detector_3d.py  kalman.py  observation.py  refraction.py  two_sphere_model.py
pye3d/cpp/: CMakeLists.txt  common_types.pxd  projections.pyx  pupil_detection_3d.pyx  refraction_correction.pyx  refraction_correction_cpp.h  search_3d.pyx  search_3d_cpp.h  search_on_sphere.h  unproject_conicoid.h  unproject_conicoid_cpp.h
pye3d/eye_model/: __init__.py  abstract.py  asynchronous.py  background_helper.py  base.py
pye3d/geometry/: intersections.py  primitives.py  projections.py  utilities.py
pye3d/refraction_models/: default_refraction_model_gaze_vector_degree_3.save  default_refraction_model_pupil_circle_degree_3.save  default_refraction_model_radius_degree_3.save  default_refraction_model_sphere_center_degree_3.save  physio_refraction_model_gaze_vector_degree_3.save  physio_refraction_model_gaze_vector_degree_5.save  physio_refraction_model_pupil_circle_degree_3.save  physio_refraction_model_pupil_circle_degree_5.save  physio_refraction_model_radius_degree_3.save  physio_refraction_model_radius_degree_5.save  physio_refraction_model_sphere_center_degree_3.save  physio_refraction_model_sphere_center_degree_5.save
pye3d/two_sphere_model/: __init__.py  abstract.py  asynchronous.py  background_helper.py  blocking.py
scripts/: convert_legacy_models_to_msgpack.py  generate_ground_truth.py  repair_wheels_windows.py  update_models.py
tests/: conftest.py  generate_ground_truth.py  test_package.py
tests/integration/: test_synthetic_metrics.py  utils.py
