[build-system]
requires = [
    "setuptools>=56",
    "wheel",
    "scikit-build",
    "cmake",
    "ninja; platform_system!='Windows'",
    "numpy",
    "cython",
    "setuptools_scm[toml]>=3.4.1"
]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = true

[tool.setuptools_scm]

[pytest.enabler.cov]
addopts = "--cov"
