[metadata]
name = pye3d
description = 3D eye model
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pupil-labs/pye3d-detector
author = Pupil Labs GmbH
author_email = info@pupil-labs.com
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering

[options]
install_requires =
    msgpack>=1.0
    numpy
    sortedcontainers
    importlib-metadata;python_version<"3.8"
python_requires = >=3.6
include_package_data = true

[options.packages.find]
exclude =
    build*
    dist*
    docs*
    tests*

[options.extras_require]
docs =
    furo
    jaraco.packaging>=8.2
    rst.linker>=1.9
    sphinx<4.4  # 4.4 does not detect TypeVars correctly
examples =
    opencv-python
    pupil-detectors
legacy_sklearn_models =
    joblib
    scikit-learn
testing =
    matplotlib
    opencv-python-headless==4.6.0.66
    pandas
    pytest>=6
    pytest-checkdocs>=2.4
    pytest-cov
    pytest-enabler>=1.0.1
    scikit-image
with_opencv =
    opencv-python
